# TeacherBot

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  db_mock_data.sql  db_setup.sql  main.cpp  todo.txt
.github/workflows/: deploy.yml
botstaff/: CMakeLists.txt
botstaff/include/botstaff/: Utils.hpp  Vocabular.hpp  commands.hpp  states.hpp  utils.hpp  vocabular.hpp
botstaff/include/botstaff/database/: CRUD.hpp  psql.hpp
botstaff/include/botstaff/handlers/: handlers.hpp
botstaff/include/botstaff/handlers/teacher_handlers/: CreateLessonHandlers.hpp  TeacherHandlers.hpp  createLessonHandlers.hpp  teacherHandlers.hpp
botstaff/include/botstaff/handlers/user_handlers/: UserHandlers.hpp  UserRegistration.hpp  userHandlers.hpp  userRegistration.hpp
botstaff/include/botstaff/keyboards/: Keyboards.hpp  keyboards.hpp
botstaff/include/botstaff/keyboards/teacher_keyboards/: teacherKeyboards.hpp
botstaff/include/botstaff/keyboards/user_keyboards/: userKeyboards.hpp
botstaff/src/: Commands.cpp  Utils.cpp  commands.cpp  utils.cpp
botstaff/src/database/: CRUD.cpp  PSQL.cpp  psql.cpp
botstaff/src/handlers/: Handlers.cpp  handlers.cpp
botstaff/src/handlers/teacher_handlers/: createLessonHandlers.cpp  teacherHandlers.cpp
botstaff/src/handlers/user_handlers/: userHandlers.cpp  userRegistration.cpp
botstaff/src/keyboards/: keyboards.cpp
botstaff/src/keyboards/teacher_keyboards/: teacherKeyboards.cpp
botstaff/src/keyboards/user_keyboards/: userKeyboards.cpp
cppinfra/: docker-compose.local.yml  docker-compose.yml  swag_nginx.conf
data/db/: postmaster.pid
data/db/base/13468/: pg_internal.init
data/db/base/16384/: 1247  1249  1259  1259_vm  16385  16391  16392  16394  16396  16403  16412  16413  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
data/db/global/: 1262  2671  2672  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_16384.stat  global.stat
data/db/pg_stat_tmp/: db_0.stat  db_13468.stat  global.stat
db_setup/: db_entry.sh  db_mock_data.sql  db_setup.sql
